# bevy_screen_diagnostics

./: Cargo.toml  LICENSE.md  README.md  deny.toml
assets/: FiraCode-LICENSE.md
examples/: centered_style.rs  custom.rs  custom_diagnostic.rs  frames.rs  render_layer.rs  runtime_configure.rs  simple_builtins.rs  simple_fps.rs
src/: extras.rs  lib.rs
