[package]
name = "bevy_screen_diagnostics"
description = "Bevy plugin for displaying diagnostics on screen."
documentation = "https://docs.rs/bevy_screen_diagnostics"
version = "0.1.1"
license = "MIT OR Apache-2.0"
edition = "2021"
keywords = ["gamedev", "bevy", "diagnostics", "debug"]
repository = "https://github.com/laundmo/bevy_screen_diagnostics"
readme = "README.md"
authors = ["laundmo"]

[dependencies]
bevy = { version = "0.10", default-features = false, features = [
    "bevy_text",
    "bevy_ui",
    "bevy_asset",
    "bevy_render",
] }

[dev-dependencies]
bevy = { version = "0.10", default-features = true }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
